ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/Loan_Agreement__c.object-meta.xml
<CustomObject>
    <description>To capture details and attach stamps to the loan agreement so that a stamping duty/charges’ requirements are satisfied and final loan agreement can be created.</description>
    <label>Loan Agreement</label>
    <nameField>
        <label>Loan Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>