ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Add_POA_SD_Agreement_signed_for_co_borro__c.field-meta.xml
<CustomField>
    <fullName>Add_POA_SD_Agreement_signed_for_co_borro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement signed for co-borrower ?</label>
    <type>Checkbox</type>
</CustomField>