ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Add_POA_SD_Initiation_method__c.field-meta.xml
<CustomField>
    <fullName>Add_POA_SD_Initiation_method__c</fullName>
    <label>Initiation method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>