ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Add_POA_SD_Loan_agreement_accepted_by_CV__c.field-meta.xml
<CustomField>
    <fullName>Add_POA_SD_Loan_agreement_accepted_by_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan agreement accepted by CVO ?</label>
    <type>Checkbox</type>
</CustomField>