ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Add_POA_SD_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Add_POA_SD_Remarks__c</fullName>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>