ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Addl_Loan_Agreement_Stamp_On__c.field-meta.xml
<CustomField>
    <fullName>Addl_Loan_Agreement_Stamp_On__c</fullName>
    <label>Stamp On</label>
    <type>Date</type>
</CustomField>