ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Addl_Loan_Agreement_Stamp_S_No__c.field-meta.xml
<CustomField>
    <fullName>Addl_Loan_Agreement_Stamp_S_No__c</fullName>
    <label>Stamp S No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>