ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Addl_POA_SD_Stamping_Charges_Collected__c.field-meta.xml
<CustomField>
    <fullName>Addl_POA_SD_Stamping_Charges_Collected__c</fullName>
    <label>Stamping Charges Collected</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>