ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Addl_POA_Stamp_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Addl_POA_Stamp_Location_Type__c</fullName>
    <label>Stamp Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>