ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Agreement_Booklet_Num__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Booklet_Num__c</fullName>
    <label>Agreement Booklet No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>