ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>