ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical agreement</fullName>
            </value>
            <value>
                <fullName>e-agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>