ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/AgreementDate__c.field-meta.xml
<CustomField>
    <fullName>AgreementDate__c</fullName>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>