ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_LA_any_additional_POA_stamp_duty__c.field-meta.xml
<CustomField>
    <fullName>ASD_LA_any_additional_POA_stamp_duty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there any additional POA stamp duty ?</label>
    <type>Checkbox</type>
</CustomField>