ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_LA_Stamp_Type__c.field-meta.xml
<CustomField>
    <fullName>ASD_LA_Stamp_Type__c</fullName>
    <label>Stamp Type</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>