ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_LA_Stamped_For__c.field-meta.xml
<CustomField>
    <fullName>ASD_LA_Stamped_For__c</fullName>
    <label>Stamped For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>