ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Additional_LA_stamping_amount_re__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Additional_LA_stamping_amount_re__c</fullName>
    <formula>If(ASD_POA_LA_stamping_requirement_met__c=True,0,Required_Loan_Agreement_Stamping_Charges__c-ASD_POA_Total_LA_stamping_done_on_the_ag__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional LA stamping amount required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>