ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Additional_POA_stamping_amount_r__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Additional_POA_stamping_amount_r__c</fullName>
    <formula>If(ASD_POA_stamping_requirement_met__c = True,0,ASD_POA_Required_POA_Stamping_Charges__c - 	ASD_POA_Total_POA_stamping_done_on_th__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional POA stamping amount required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>