ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_LA_stamping_requirement_met__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_LA_stamping_requirement_met__c</fullName>
    <formula>ASD_POA_Total_LA_stamping_done_on_the_ag__c &gt;= Required_Loan_Agreement_Stamping_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LA stamping requirement met ?</label>
    <type>Checkbox</type>
</CustomField>