ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Physical_agreement_to_be_signed__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Physical_agreement_to_be_signed__c</fullName>
    <formula>If( text(Agreement_Type__c) ==&apos;Physical agreement&apos;,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical agreement to be signed</label>
    <type>Checkbox</type>
</CustomField>