ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Required_POA_Stamping_Charges__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Required_POA_Stamping_Charges__c</fullName>
    <label>Required POA Stamping Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>