ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Stamp_On__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Stamp_On__c</fullName>
    <label>Stamp On</label>
    <type>Date</type>
</CustomField>