ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Stamp_Value_Rs__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Stamp_Value_Rs__c</fullName>
    <label>Stamp Value (Rs.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>