ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_stamping_requirement_met__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_stamping_requirement_met__c</fullName>
    <formula>ASD_POA_Total_POA_stamping_done_on_th__c &gt;= 	ASD_POA_Required_POA_Stamping_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POA stamping requirement met ?</label>
    <type>Checkbox</type>
</CustomField>