ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Total_LA_stamping_done_on_the_ag__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Total_LA_stamping_done_on_the_ag__c</fullName>
    <formula>Existing_LA_Stamp_Value__c + ASD_LA_Stamp_Value_Rs__c + Addl_Loan_Agreement_Stamp_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LA stamping done on the agreement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>