ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/ASD_POA_Total_POA_stamping_done_on_th__c.field-meta.xml
<CustomField>
    <fullName>ASD_POA_Total_POA_stamping_done_on_th__c</fullName>
    <formula>Existing_POA_Stamp_Value__c + Addl_POA_Stamp_Value__c + ASD_POA_Stamp_Value_Rs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total POA stamping done on the agreement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>