ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Borrower_Aadhar_Linked_To_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Aadhar_Linked_To_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Borrower&apos;s Mobile linked to Aadhar ?</label>
    <type>Checkbox</type>
</CustomField>