ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Borrower_Aadhar_Mobile_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Aadhar_Mobile_In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Borrower&apos;s Aadhar Mob No in Use ?</label>
    <type>Checkbox</type>
</CustomField>