ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Borrower_Has_Aadharcard__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Has_Aadharcard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Borrower having an Aadhaar Card ?</label>
    <type>Checkbox</type>
</CustomField>