ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/BorrowerNesLCallCount__c.field-meta.xml
<CustomField>
    <fullName>BorrowerNesLCallCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BorrowerNesLCallCount</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>