ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/CoBorrower_Aadhar_Linked_To_Mobile__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Aadhar_Linked_To_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Co-Borrower&apos;s No linked to Aadhar ?</label>
    <type>Checkbox</type>
</CustomField>