ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/CoBorrower_Has_Aadharcard__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Has_Aadharcard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Co-Borrower having an Aadhaar card ?</label>
    <type>Checkbox</type>
</CustomField>