ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/CoBorrowerNeslCallCount__c.field-meta.xml
<CustomField>
    <fullName>CoBorrowerNeslCallCount__c</fullName>
    <label>CoBorrowerNeslCallCount</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>