ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Deal_Date_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Deal_Date_Based_On__c</fullName>
    <label>Deal Date Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Date</fullName>
            </value>
            <value>
                <fullName>Sanction Date</fullName>
            </value>
            <value>
                <fullName>Tentative Payment Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>