ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Due_Date_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Pattern__c</fullName>
    <label>Due Date Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uniform</fullName>
            </value>
            <value>
                <fullName>Varied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>