ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/e_agreement_Agreement_Signed_For_Co_Borr__c.field-meta.xml
<CustomField>
    <fullName>e_agreement_Agreement_Signed_For_Co_Borr__c</fullName>
    <label>e-agreement Agreement Signed For Co Borr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>