ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/E_Agreement_Stamp_On__c.field-meta.xml
<CustomField>
    <fullName>E_Agreement_Stamp_On__c</fullName>
    <label>E-Agreement Stamp On</label>
    <type>Date</type>
</CustomField>