ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/E_Agreement_Stamp_Type__c.field-meta.xml
<CustomField>
    <fullName>E_Agreement_Stamp_Type__c</fullName>
    <label>E-Agreement Stamp Type</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>