ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/e_agreement_Total_stamping_done__c.field-meta.xml
<CustomField>
    <fullName>e_agreement_Total_stamping_done__c</fullName>
    <label>e-agreement Total stamping done</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>