ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Effective_Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Deal_Date__c</fullName>
    <label>Effective Deal Date</label>
    <type>Date</type>
</CustomField>