ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Existing_LA_Stamp_On__c.field-meta.xml
<CustomField>
    <fullName>Existing_LA_Stamp_On__c</fullName>
    <description>These fields are storing Stamp for existing loan agreement</description>
    <label>Stamp On</label>
    <type>Date</type>
</CustomField>