ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Existing_LA_Stamp_S_No__c.field-meta.xml
<CustomField>
    <fullName>Existing_LA_Stamp_S_No__c</fullName>
    <description>These fields are storing Stamp for existing loan agreement</description>
    <label>Stamp S No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>