ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Existing_LA_Stamp_Type__c.field-meta.xml
<CustomField>
    <fullName>Existing_LA_Stamp_Type__c</fullName>
    <label>Stamp Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>