ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Existing_LA_Stamp_Value__c.field-meta.xml
<CustomField>
    <fullName>Existing_LA_Stamp_Value__c</fullName>
    <label>Stamp Value (Rs.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>