ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Existing_LA_Stamped_For__c.field-meta.xml
<CustomField>
    <fullName>Existing_LA_Stamped_For__c</fullName>
    <label>Stamped For</label>
    <length>50</length>
    <type>Text</type>
</CustomField>