ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Finance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Finance_Amount__c</fullName>
    <label>Finance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>