ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Geo_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Code__c</fullName>
    <label>Geographical State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>