ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Geographical_State__c.field-meta.xml
<CustomField>
    <fullName>Geographical_State__c</fullName>
    <formula>Loan_Application__r.Geo_State_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geographical State</label>
    <type>Text</type>
</CustomField>