ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Agreement__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Tax Invoice Date field in Invoice details screen</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>